--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Sen&family=Space+Grotesk:wght@400;500;600;700&display=swap");
+
+:root {
+  --primary-font-color : black;
+  --secondary-font-color : white;
+  --primary-bg-color : white;
+  --secondary-bg-color : #3778fa;
+}
+[data-theme="dark"] {
+  --primary-font-color : white;
+  --secondary-font-color : white;
+  --primary-bg-color : black;
+  --secondary-bg-color : rgb(84, 75, 75);
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--primary-bg-color);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
