--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,8 +1,83 @@
 .header {
   width: 100%;
-  height: 100px;
-  /* background-color: antiquewhite; */
+  height: 60px;
+  background-color: var(--secondary-bg-color);
+  color: var(--secondary-font-color);
+  padding: 10px 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
 }
-.header h3 {
-  color: var(--secondary-bg-color);
+.header .brand-logo {
+  display: flex;
+  justify-content: space-between;
+}
+.header .brand-logo span {
+  color: var(--secondary-font-color);
+  font-size: 25px;
+  font-weight: 700;
+  user-select: none;
+  -webkit-user-select: none;
+  cursor: pointer;
+}
+
+.top-menu-options ul {
+  display: flex;
+  list-style: none;
+  gap: 25px;
+  margin-top: 10px;
+}
+.top-menu-options ul li a {
+  text-decoration: none;
+  color: var(--secondary-font-color);
+}
+.top-menu-options button {
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: var(--secondary-font-color);
+  user-select: none;
+  text-decoration: none;
+  color: black;
+}
+.mobile-getStarted-btn {
+  display: none;
+}
+.brand-logo .bars-btn {
+  margin-top: 18px;
+  display: none;
+}
+
+
+@media screen and (max-width: 500px) {
+  .header {
+    height: 55px;
+    flex-direction: column;
+    overflow: hidden;
+    transition: height 400ms;
+  }
+  .header-dropped {
+    height: 150px;
+  }
+  .top-menu-options ul {
+    flex-direction: column;
+    gap: 5px;
+    padding: 0;
+    margin-bottom: 0;
+  }
+  .top-menu-options ul li {
+    font-size: 20px;
+  }
+  .brand-logo .bars-btn {
+    display: block;
+  }
+  .pc-getStarted-btn {
+    display: none;
+  }
+  .mobile-getStarted-btn {
+    display: inline;
+  }
 }
