--- a/src/components/home/ChooseBuilderDiv.module.css
+++ b/src/components/home/ChooseBuilderDiv.module.css
@@ -14,6 +14,7 @@
   border: none;
   height: 560px;
   width: 80%;
+  border: 2px solid var(--primary-font-color)
 }
 
 @media screen and (max-width: 800px) {
