--- a/src/index.css
+++ b/src/index.css
@@ -1,48 +1,53 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Sen&family=Space+Grotesk:wght@400;500;600;700&display=swap"); */
 
 :root {
-  --primary-font-color : black;
-  --secondary-font-color : white;
-  --primary-bg-color : white;
-  --secondary-bg-color : #3778fa;
+  --primary-font-color: black;
+  --secondary-font-color: white;
+  --tertiary-font-color: rgb(80, 80, 80);
+  --primary-bg-color: white;
+  --secondary-bg-color: #3778fa;
+  --tertiary-bg-color: rgb(230, 230, 230);
 }
 [data-theme="dark"] {
-  --primary-font-color : white;
-  --secondary-font-color : white;
-  --primary-bg-color : black;
-  --secondary-bg-color : #232323;
+  --primary-font-color: white;
+  --secondary-font-color: white;
+  --tertiary-font-color: rgb(175, 175, 175);
+  --primary-bg-color: black;
+  --secondary-bg-color: #232323;
+  --tertiary-bg-color: rgb(25, 25, 25);
 }
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 400;
-  src: url('../public/fonts/SpaceGrotesk-Regular.ttf');
+  src: url("../public/fonts/SpaceGrotesk-Regular.ttf");
 }
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 300;
-  src: url('../public/fonts/SpaceGrotesk-Light.ttf');
+  src: url("../public/fonts/SpaceGrotesk-Light.ttf");
 }
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 500;
-  src: url('../public/fonts/SpaceGrotesk-Medium.ttf');
+  src: url("../public/fonts/SpaceGrotesk-Medium.ttf");
 }
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 600;
-  src: url('../public/fonts/SpaceGrotesk-SemiBold.ttf');
+  src: url("../public/fonts/SpaceGrotesk-SemiBold.ttf");
 }
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 700;
-  src: url('../public/fonts/SpaceGrotesk-Bold.ttf');
+  src: url("../public/fonts/SpaceGrotesk-Bold.ttf");
 }
 body {
   margin: 0px;
-  font-family: 'Space Grotesk', sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary-bg-color);
+  color: var(--primary-font-color);
 }
 
 code {
