--- a/src/components/utility/Header.module.css
+++ b/src/components/utility/Header.module.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .header .brand-logo {
   display: flex;
