--- a/src/components/utility/SubmitButton.module.css
+++ b/src/components/utility/SubmitButton.module.css
@@ -3,7 +3,7 @@
   height: 40px;
 }
 .submit-btn-container button {
-  height: 100%;
+  height: 40px;
   width: 100%;
   border: none;
   border-radius: 6px;
