--- a/src/components/utility/Header.module.css
+++ b/src/components/utility/Header.module.css
@@ -38,8 +38,8 @@
 }
 .top-menu-options ul li a:hover {
   top: -5px;
-  color: bisque;
-  border-bottom: 2px solid bisque;
+  color: rgb(117, 225, 132);
+  /* border-bottom: 2px solid bisque;s */
   text-shadow: 0px 0px 10px var(--shadow-color);
 }
 .top-menu-options button {
@@ -61,7 +61,6 @@
   margin-top: 18px;
   display: none;
 }
-
 
 @media screen and (max-width: 500px) {
   .header {
