--- a/src/components/utility/Input.module.css
+++ b/src/components/utility/Input.module.css
@@ -6,7 +6,8 @@
   color: gray;
 }
 .input-container .input {
-  color: var(--primary-font-color);
+  color: var(--primary-font-color)!important;
+  background-color: var(--primary-bg-color)!important;
   font-size: 16px;
   height: 100%;
   width: 100%;
@@ -14,6 +15,13 @@
   padding: 4px 4px 4px 36px;
   box-sizing: border-box;
 }
+.input-container .input:-internal-autofill-selected {
+  color: var(--primary-font-color)!important;
+  background-color: var(--primary-bg-color)!important;
+}
+/* .input-container .input {
+
+} */
 
 .input-symbol {
   position: relative;
