--- a/src/components/create-form/CreateForm.module.css
+++ b/src/components/create-form/CreateForm.module.css
@@ -11,15 +11,18 @@
   box-sizing: border-box;
   padding: 10px;
 }
-
-
-/* @media screen and (max-width:900px) {
-  .create-form-container {
-    width: 75%;
-  }
+.options-container {
+  margin-top: 20px;
 }
-@media screen and (max-width:500px) {
-  .create-form-container {
-    width: 100%;
-  }
-} */
+.save-btn {
+  border: none;
+  cursor: pointer;
+  height: 40px;
+  width: 100px;
+  border-radius: 5px;
+  background-color: var(--secondary-bg-color);
+  color: var(--secondary-font-color);
+}
+.save-btn:hover {
+  filter: brightness(90%);
+}
